Fix pattern z-index bug.

--- a/src/components/Navigation.less
+++ b/src/components/Navigation.less
@@ -8,8 +8,10 @@
   overflow: hidden;
   position: relative;
 
-  .wk-bar,
-  .wk-page-menu {
+  .wk-navigation__content {
+    display: flex;
+    flex: 1 1 100%;
+    flex-direction: column;
     z-index: @z-index-pattern + 1;
   }
 }
