--- a/src/components/Pattern.less
+++ b/src/components/Pattern.less
@@ -1,5 +1,6 @@
 .wk-pattern {
   z-index: @z-index-pattern;
+  pointer-events: none;
 
   .wk-pattern__background {
     position: absolute;
